@@ -25,5 +25,5 @@ extern "C" {
 
     pub fn pa_context_play_sample(c: *mut super::pa_context, name: *const c_char, dev: *const c_char, volume: ::volume::pa_volume_t, cb: super::pa_context_success_cb_t, userdata: *mut c_void) -> *mut ::operation::pa_operation;
 
-    pub fn pa_context_play_sample_with_proplist(c: *mut super::pa_context, name: *const c_char, dev: *const c_char, volume: ::volume::pa_volume_t, proplist: *mut ::proplist::pa_proplist, cb: pa_context_play_sample_cb_t, userdata: *mut c_void) -> *mut ::operation::pa_operation;
+    pub fn pa_context_play_sample_with_proplist(c: *mut super::pa_context, name: *const c_char, dev: *const c_char, volume: ::volume::pa_volume_t, proplist: *const ::proplist::pa_proplist, cb: pa_context_play_sample_cb_t, userdata: *mut c_void) -> *mut ::operation::pa_operation;
 }
