@@ -30,7 +30,7 @@ extern "C" {
     pub fn pa_mainloop_prepare(m: *mut pa_mainloop, timeout: i32) -> i32;
     pub fn pa_mainloop_poll(m: *mut pa_mainloop) -> i32;
     pub fn pa_mainloop_dispatch(m: *mut pa_mainloop) -> i32;
-    pub fn pa_mainloop_get_retval(m: *mut pa_mainloop) -> i32;
+    pub fn pa_mainloop_get_retval(m: *const pa_mainloop) -> i32;
     pub fn pa_mainloop_iterate(m: *mut pa_mainloop, block: i32, retval: *mut i32) -> i32;
     pub fn pa_mainloop_run(m: *mut pa_mainloop, retval: *mut i32) -> i32;
     pub fn pa_mainloop_get_api(m: *mut pa_mainloop) -> *mut super::api::pa_mainloop_api;
